# ogc2qgis

./: .gitignore  CHANGELOG.md  CLI_COMPARE_COMMAND.md  COMPARE_FUNCTION_ADDED.md  ESTRUTURA.md  LICENSE  PROJECT_CONTEXT.md  PUBLISHING.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: cli_usage.sh  compare_configs_example.py  library_usage.py
inde/: ows_wcs2qgis.qlr  ows_wfs2qgis.qlr  ows_wms2qgis.qlr
src/ogc2qgis/: __init__.py  compare.py  core.py
src/ogc2qgis/cli/: __init__.py  main.py
src/ogc2qgis/parsers/: __init__.py  qlr.py  wcs.py  wfs.py  wms.py
tests/: test_basic.py  test_compare.py
